--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2024 Rohan Garad. All rights reserved.</p>
+    <p>&copy; 2025 Emotion Recognition System. All rights reserved.</p>
   </footer>
 </body>
 </html>
